exports[`operations/getTree.ts`] = `/*
 * Tree
 *
 * A sample API that demonstrates a tree structure including self-referencing object
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { HttpHeaders, HttpQuery, RequestOpts, ResponseArgs, throwIfNullOrUndefined, encodeURI, RequestConversion, StandardResponse, TransformRequest } from '@principlestudios/openapi-codegen-typescript';
import {
    Node,
} from './../models/Node';

export type RequestParams = {
};
export type RequestBodies = {
};

export type StructuredResponses = {
    /** A tree */
    200: {
        'application/json': Node;
    };
};
export type Responses = 
    | StandardResponse<200, 'application/json', Node>;

export function getTree(params: RequestParams): RequestOpts;
export function getTree(params: RequestParams): RequestOpts {
    throwIfNullOrUndefined(params, 'params');

    const headers: HttpHeaders = {};

    return {
        path: '/tree',
        method: 'POST',
        headers,
    };
}

export const responseConversion = (res: ResponseArgs) => ({
        statusCode: [
            200,
        ].indexOf(res.status) === -1 ? 'other' : res.status,
        mimeType: res.getResponseHeader("Content-Type"),
        data: res.response,
        response: res,
    }) as Responses;

export const conversion: RequestConversion<RequestParams, {}, Responses, 'no-body'> = {
    request: getTree,
    response: responseConversion,
};

`;

exports[`operations/index.ts`] = `/*
 * Tree
 *
 * A sample API that demonstrates a tree structure including self-referencing object
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */
import { conversion as getTree } from './getTree';

export default {
    getTree,
} as const;
`;

exports[`models/Node.ts`] = `/*
 * Tree
 *
 * A sample API that demonstrates a tree structure including self-referencing object
 *
 * OpenAPI spec version: 1.0.0
 * 
 * Generated by: https://principle.tools
 */

/**
 * @export
 * @interface Node
 */
export type Node = {
    /**
     * @type Array<Node>
     */
    children: Array<Node>;
};
`;

